--- a/index.html
+++ b/index.html
@@ -11,4 +11,30 @@
     <link rel="stylesheet" href="slider-n.css">
   </head>
   <body>
+    <main role="main">
+      <div id="showoff" class="carousel carousel-fade slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item carousel-single-item">
+            <img class="imageContainer" src="FIXME" width="100%" />
+            <div class="container">
+              <div class="carousel-caption text-left">
+                <title style="color:red;">Item's title</title>
+                <p style="color:red;">that is the item description, it must be fitting</p>
+              </div>
+            </div>
+          </div>   
+        </div>
+        <a class="carousel-control-prev" href="#showoff" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#showoff" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </main>
+    <script src="base.js">
   </body>
