--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </a>
       </div>
     </main>
-    <script src="base.js">
+    <script src="base.js"/>
+    <script>$("#showoffprods").carousel({ interval: false });</script>
   </body>
 </html>
